added ticket business logic